--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@ canvas {
     width: 100%;
     height: auto;
     max-width: 100vw;
-    max-height: 75vh;
-    border: 2px solid black;
+    max-height: 100vh;
+    border: none;
 }
 
 form, h1 {
@@ -62,6 +62,13 @@ button {
     padding: 0;
 }
 
+#scoreDisplay {
+    position: absolute;
+    top: 10px;
+    font-size: 24px;
+    color: white;
+}
+
 @media only screen and (max-width: 768px) {
     input, button {
         font-size: 14px;
@@ -70,7 +77,7 @@ button {
     }
 
     canvas {
-        max-height: 60vh;
+        max-height: 90vh;
     }
 
     h1 {
